--- a/html/pages-gallery.html
+++ b/html/pages-gallery.html
@@ -75,12 +75,12 @@
                 <img
                   src="../assets/images/logo-icon.png"
                   alt="homepage"
-                  class="light-logo"
+                  class="light-logo" width="25"
                 />
               </b>
               <!--End Logo icon -->
               <!-- Logo text -->
-              <span class="logo-text">
+              <span class="logo-text ms-2">
                 <!-- dark Logo text -->
                 <img
                   src="../assets/images/logo-text.png"
